# skywalker_agent

./: .env  .gitignore  README.md  history.md  history.md.bak  pyproject.toml
.skywalker/: MEMORY.md
config/: logging.py
skywalker/: core.py
skywalker/agent/: context.py  loop.py
skywalker/cli/: main.py
skywalker/commands/: __init__.py  base.py  registry.py
skywalker/commands/builtin/: __init__.py  memory.py  session.py  system.py
skywalker/commands/bulitin/: system.py
skywalker/config/: settings.py
skywalker/llm/: anthropic.py  base.py
skywalker/memory/: __init__.py  base.py  gate.py  long_term.py  schema.py  search.py  short_term.py
skywalker/session/: __init__.py  manager.py  store.py  tool_log.py
skywalker/tools/: __init__.py  base.py  executor.py  file_tool.py  registry.py  sandbox.py  shadow_repo.py  shell_tool.py  web_tool.py
skywalker/ui/: __init__.py  diff_clip.py  diff_renderer.py  input.py  list_browser.py  output.py  picker.py  render.py  tool_browser.py  tool_panel.py
tasks/: v2_memory_design.md  v2_plan.md
tests/: test_diff_renderer.py  test_integration.py
tests/test_command/: test_base.py  test_integration.py  test_registry.py
tests/test_memory/: test_base.py  test_context.py  test_long_term.py  test_schema.py  test_search.py  test_short_term
tests/test_session/: test_manager.py  test_store.py
tests/test_tool/: test_base.py  test_executor.py  test_file_tool.py  test_gate.py  test_registry.py  test_sandbox.py  test_shell_tool.py  test_web_tool.py
version-design-markdown-creator/: SKILL.md
(+3 files in other folders)
