[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skywalker"
version = "0.1.0"
description = "CLI-first Agent Runtime, built from scratch"
requires-python = ">=3.11"
authors = [{ name = "yourname" }]

dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "readchar>=4.2.2",
    "pytest>=9.0.3",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
skywalker = "skywalker.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["skywalker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true